Drafts of "5 Items" news summary items by Leo/Llama 3.1

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,3 +1,11 @@
+<!--
+
+Except where noted, early drafts of news summaries below based on this prompt to Leo. Ran this after opening various hyperlink we'd gathered in earlier drafts of the newsletter:
+
+I'm thinking of using the news article in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? No headline needed.
+
+-->
+
 # AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
 ## tktk
 
@@ -40,31 +48,27 @@
 
 ### Five Things: April 20-26, 2025
 
-- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. Update late in the week. --> BTC surpassed market cap of Google. https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap | https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day | https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana | https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status | https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy | Solana whale: https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years | https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add | https://decrypt.co/316133/cme-group-to-debut-xrp-futures-following-solana-launch | https://decrypt.co/316090/elderly-americans-hit-hardest-by-9-3b-crypto-scam-wave-in-2024-fbi
+- **Markets:** <!-- Big bicoin rally early in the week. Stocks looking better as well, with improved tariff outlook. But the Dow may still be headed for its worst month since the Depression. --> Bitcoin's price has [recovered to $94,000](https://www.coindesk.com/markets/2025/04/25/bitcoin-whales-return-in-force-buy-the-btc-price-rally-on-chain-data-show), with large investors, known as "whales," buying up coins from the market. According to Glassnode's data, wallets holding over 10,000 BTC have a high accumulation trend score, indicating significant buying activity. This trend suggests that investors are adopting a long-term holding strategy, with outflows from centralized exchanges reaching a two-year high. | Bitcoin has [reached a new milestone](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap), becoming the fifth-largest asset globally by market capitalization, with a value of $1.86 trillion. This achievement surpasses tech giant Google, with Bitcoin's price breaking above $94,000. The renewed optimism in the market is attributed to easing tensions in the U.S.–China tariff trade war, which has fueled gains for both Bitcoin and tech stocks. | *Bitcoin ETFs Experience Surge in Investments* American investors poured [nearly $1 billion](https://decrypt.co/315966/bitcoin-etfs-bounce-back-billion-day) into Bitcoin ETFs on Tuesday, marking the highest amount since January. This surge comes as the price of Bitcoin has risen to its highest point since early March, with the largest cryptocurrency by market value up almost 14% over the past 14 days. The ARK 21Shares Bitcoin ETF and BlackRock's iShares Bitcoin Trust led the surge, with $267 million and $193.5 million in net inflows, respectively. | This deal marks the [largest financing facility of its kind](https://decrypt.co/315987/sol-strategies-secures-500m-buy-more-solana) in the Solana ecosystem, with SOL Strategies aiming to become the leading institutional staking platform. The move comes as Solana's price has surged over 20% in the past two weeks, outpacing Bitcoin. | Bitcoin is showing [signs of maturity](https://cointelegraph.com/news/bitcoin-decouples-from-stocks-gains-safe-haven-status) as a global asset, decoupling from the US stock market and trading more like precious metals, according to Nansen CEO Alex Svanevik. Despite ongoing trade tensions and rising recession odds, Bitcoin's price has staged a 12% recovery over the past two weeks. This resilience is attributed to its growing role as a safe-haven asset and potential benefits from regulatory development and the US Bitcoin Reserve. | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. | A Solana whale has reportedly [accumulated](https://cointelegraph.com/news/solana-whale-153-million-profit-staking-4-years) over $153 million in unrealized gains after staking nearly 1 million tokens at a price of $27 in 2021, with the tokens now worth around $166 million. The whale recently started offloading a portion of the tokens, sending 100,000 SOL to Binance. This move comes as Solana briefly overtook Ethereum in staking market cap before reclaiming its position. | The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions. | According to a recent report from the FBI's Internet Crime Complaint Center, Americans aged 60 and older lost nearly $3 billion to crypto fraud in 2024, despite making up only 17% of the population. This demographic accounted for 30% of the total crypto fraud losses, with an average loss of $83,000 per victim. The FBI has attributed the rise in crypto fraud to scams such as ATM and kiosk fraud, which saw incidents almost double from 2023 to 2024. [Read the full story](https://www.example.com)
 
-- **U.S. antitrust cases:** Washington wants to break up Google. It's official. ([NBC News](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978)) WSJ coverage: https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink | Meta story from TechCrunch: https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/
+- **U.S. antitrust cases:** The U.S. government is pushing for Google to be [broken up](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978) as a punishment for its alleged search engine monopoly, with a federal judge set to decide on remedies by Labor Day. The case, which has been ongoing since 2020, involves allegations that Google has been stifling competition and innovation, and could have significant implications for the tech industry. | The Justice Department is [urging](https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink) a federal judge to force Google to loosen its grip on the search engine market by selling its Chrome web browser, as part of a landmark antitrust case. The move, which could result in new limits on Google, comes after a major ruling against the company in a separate antitrust case, and has been backed by more than 30 state attorneys general. | In a surprising twist, internal emails from 2018 [have surfaced](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) showing that Meta CEO Mark Zuckerberg considered spinning out Instagram as a separate business due to concerns that its growth was cannibalizing Facebook's user engagement. According to the emails, Zuckerberg proposed building bridges between Meta's apps to prevent this cannibalization and even suggested rebranding Instagram and WhatsApp to emphasize Facebook's dominance.
 
-- **Newsweek has been doing a bang-up job covering specific AI use cases lately.** Among them: https://www.newsweek.com/robots-race-humans-beijing-half-marathon-humanoid-2061818  | https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953 | https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193 | https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141 | | Topic page: https://www.newsweek.com/topic/artificial-intelligence
+- **Newsweek has been doing a bang-up job covering specific AI use cases lately.** In a historic first, 21 humanoid robots [competed](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-humanoid-2061818) in a bipedal robot half-marathon in Beijing, with six robots successfully completing the 21.1-kilometer course. The event showcased the current state of humanoid robot technology, highlighting both impressive advancements and significant limitations in areas such as hardware robustness and endurance. |  A recent study in Dubai found that one-third of government jobs are at risk of being [replaced by AI](https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953), with customer service, administrative, and front-line roles being the most vulnerable. The city's increasing reliance on AI could set an example for other governments to follow, highlighting the need for workers to adapt to an AI-driven workforce and for organizations to develop strategies to mitigate job displacement. | Electric Era has [debuted](https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193) its proprietary fast-charging technology, which utilizes artificial intelligence to enhance the electric vehicle charging experience. The AI-infused charging stations, powered by the company's Retailer AI software platform, offer personalized concierge experiences and retail engagement opportunities, allowing users to order food or find nearby points of interest while charging. | Hospitals are developing [their own AI tools](https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141) to improve the revenue cycle, with some leaders welcoming the help and others fearing it's just a Band-Aid for a broken system. According to a recent survey, only 7% of hospital CFOs expect AI to improve relationships with insurance companies, while 64% remain uncertain about its impact, but companies like Iodine Software and Cofactor AI are already showing promise in automating collections and improving labor efficiency. | Newsweek's topic page for AI is [here](https://www.newsweek.com/topic/artificial-intelligence).
 
-- New SEC chair Atkins sworn in. https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/ | https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850 | TRUMP memecoin surges on president's dinner. https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders | https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals | https://www.coindesk.com/markets/2025/04/24/cantor-equity-shares-surge-55-jump-another-15-pre-market-on-bitcoin-spac-deal-buzz |
-https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals
+- **New pro-crypto SEC chair Atkins sworn in.** **Paul Atkins Sworn in as SEC Chairman**: Paul Atkins, a former SEC commissioner and crypto industry advisor, has been sworn in as the new chairman of the Securities and Exchange Commission. In his inaugural remarks, Atkins vowed to provide a "firm, regulatory foundation for digital assets" and work with President Trump to advance his agenda for bolstering the US economy and establishing the country as a leader in the global markets. [Link](https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/) | New SEC Chair Paul Atkins is facing pressure to decide on 72 pending crypto-related ETF applications, with XRP leading the filings. Atkins, a pro-innovation advocate, has expressed support for clear rules and a "firm regulatory foundation for digital assets," but it remains to be seen whether the SEC under his leadership will approve the pending ETFs. [Link](https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850) | *Donald Trump's TRUMP Memecoin Sees 70% Surge After Dinner Event Announcement**: The TRUMP token rallied on Wednesday after an invitation to a dinner event with President Donald Trump for its largest holders was announced, briefly hitting $16 and reaching its strongest price since early March. This comes after $300 million worth of previously locked-up tokens were added to circulation last week, with 75% of existing tokens still locked up and another unlock expected in July. [Link](https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders) | The U.S. Securities and Exchange Commission (SEC) has delayed its decision on several crypto-related proposals, including ETFs for Polkadot and Hedera, until June 11. This delay is part of the agency's review of dozens of filings to launch crypto exchange-traded funds, which has been seen as a positive sign for the crypto industry under the current SEC leadership. [Link](https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals) | Cantor Equity Partners (CEP) stock has surged 130% after investors flocked to the company ahead of its potential merger with Twenty One Capital, a bitcoin investment vehicle backed by major players like Tether, Bitfinex, and SoftBank. The proposed merger is seen as a high-leverage bet on institutional bitcoin adoption, with Twenty One Capital potentially holding over 42,000 BTC at launch and introducing new metrics to measure shareholder value in BTC terms. [Link](https://www.coindesk.com/markets/2025/04/24/cantor-equity-shares-surge-55-jump-another-15-pre-market-on-bitcoin-spac-deal-buzz) | The US Securities and Exchange Commission (SEC) has delayed its decision on several crypto proposals, including those from Grayscale and Canary, to list and trade funds based on Polkadot and Hedera tokens. The agency is weighing dozens of filings to launch crypto exchange-traded funds and has pushed back its deadline to June 11 to consider the proposals. [Link](https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals)
 
-- **Stablecoins are getting more intertwined with traditional banking.** Circle launches new payments network: https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network | Other moves in the space may be coming, in a stark reversal of Wall Street's earlier trend to shun stablecoins. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink))
-
+- **Stablecoins are getting more intertwined with traditional banking.** *Circle Launches New Payments Network* Circle, the company behind the $60 billion USDC stablecoin, is launching a new payments and cross-border remittance network, aiming to rival Mastercard and Visa. The network, initially targeting remittances, is seen as a strategic move to consolidate Circle's position in the payments space, leveraging the growing adoption of stablecoins for global money transfers. [Link](https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network) | *Crypto firms are making a push to integrate with traditional banking, with several planning to apply for bank charters or licenses.* This move comes as the Trump administration works to incorporate crypto into mainstream finance, with Congress advancing legislation that would establish a regulatory framework for stablecoins and allow them to operate under stricter oversight. [Link](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink)
 
 ### Looking Ahead
 
-- De-dollarization? <!-- Recent JPM remark on it being more plausible post-tariffs. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs)) -->
+- Decrypt: Coinbase is asking lawmakers to pause on passing a standalone stablecoin bill that could see a vote in weeks, causing tensions within the crypto industry, sources say. [Link](https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing) <!-- Rough draft by PM -->
 
-- Coinbase lobbying against crypto bill? https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing
+- **Google DeepMind CEO Demis Hassabis shares his vision for the future of artificial intelligence**, predicting that his team will achieve "artificial general intelligence" (AGI) within the next 5-10 years, allowing AI systems to understand and interact with the world in a more nuanced and human-like way. This future AI, as demonstrated by DeepMind's chatbot Astra, will be able to see, hear, and respond to its environment, with the potential to revolutionize industries and transform everyday life. [Link](https://www.cbsnews.com/news/artificial-intelligence-google-deepmind-ceo-demis-hassabis-60-minutes-transcript/) <!-- Suggested by NotebookLM -->
 
-- https://www.cbsnews.com/news/artificial-intelligence-google-deepmind-ceo-demis-hassabis-60-minutes-transcript/ <!-- Suggested by NotebookLM -->
+- Decrypt: New open-source AI models are pushing boundaries in video length. [Link](https://decrypt.co/316027/open-source-video-generators-full-length-movies) <!-- Rough draft by PM -->
 
-- https://decrypt.co/316027/open-source-video-generators-full-length-movies
+- **Canadian Election Focuses on Economic Issues, Not Crypto**: The upcoming Canadian election will not prioritize crypto policies, despite both leading Prime Minister candidates having discussed the issue in the past. While Conservative Party leader Pierre Poilievre has advocated for blockchain and crypto, Liberal Party leader Mark Carney has expressed concerns about digital assets' adoption and use. [Link](https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle)
 
-- https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle
-
-- https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june <!-- Suggested by NotebookLM -->
+- Crypto FIFA video game launching on mobile devices in June [Link](https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june) <!-- Suggested by NotebookLM. Copy is a rough draft by PM -->
 
 ### Odds & Ends
 
