Writing through the "Looking Ahead" items myself

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,11 +1,3 @@
-<!--
-
-Except where noted, early drafts of news summaries below based on this prompt to Leo. Ran this after opening various hyperlink we'd gathered in earlier drafts of the newsletter:
-
-I'm thinking of using the news article in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? No headline needed.
-
--->
-
 # AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
 ## tktk
 
@@ -60,15 +52,13 @@ I'm thinking of using the news article in this tab in my upcoming newsletter, wh
 
 ### Looking Ahead
 
-- Decrypt: Coinbase is asking lawmakers to pause on passing a standalone stablecoin bill that could see a vote in weeks, causing tensions within the crypto industry, sources say. [Link](https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing) <!-- Rough draft by PM -->
+**I'm adding a new section** this week to cover specific tech events and developments coming up.  If you have conferences, award competitions, or similar time-sensitive stuff in the works, this is a place I'd like to share such info in future updates. Please email me the details at peter[at]w3w[dot]media. 📬
 
-- **Google DeepMind CEO Demis Hassabis shares his vision for the future of artificial intelligence**, predicting that his team will achieve "artificial general intelligence" (AGI) within the next 5-10 years, allowing AI systems to understand and interact with the world in a more nuanced and human-like way. This future AI, as demonstrated by DeepMind's chatbot Astra, will be able to see, hear, and respond to its environment, with the potential to revolutionize industries and transform everyday life. [Link](https://www.cbsnews.com/news/artificial-intelligence-google-deepmind-ceo-demis-hassabis-60-minutes-transcript/) <!-- Suggested by NotebookLM -->
+- **In North America, further tests of crypto's political influence loom.** Both leading candidates for prime minister in Canada have discussed crypto policy while campaigning ahead of Monday's snap elections. But it's hardly been a centerpiece of the race, [according to CoinDesk's Nikhilesh De](https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle). More conventional economic issues like housing and the country's strained diplomatic relationship with the U.S. have garnered far more attention from voters... In Washington, Decrypt's DeSander Lutz [reports](https://decrypt.co/315996/crypto-company-coinbase-stop-pro-crypto-bill-passing) that Coinbase and Andreessen Horowitz have unexpectedly become opponents of standalone passage of a stablecoin bill. The industry giants would instead like to see the issue folded into the broader crypto bill dubbed FIT21. That strategy has rankled other industry players, according to Decrypt.
 
-- Decrypt: New open-source AI models are pushing boundaries in video length. [Link](https://decrypt.co/316027/open-source-video-generators-full-length-movies) <!-- Rough draft by PM -->
+- **The web3 studio Mythical Games** plans to release a FIFA-inspired football game for mobile devices in June. ([The Block](https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june))
 
-- **Canadian Election Focuses on Economic Issues, Not Crypto**: The upcoming Canadian election will not prioritize crypto policies, despite both leading Prime Minister candidates having discussed the issue in the past. While Conservative Party leader Pierre Poilievre has advocated for blockchain and crypto, Liberal Party leader Mark Carney has expressed concerns about digital assets' adoption and use. [Link](https://www.coindesk.com/policy/2025/04/23/previewing-the-canadian-elections-crypto-angle)
-
-- Crypto FIFA video game launching on mobile devices in June [Link](https://www.theblock.co/post/351731/crypto-fifa-video-game-launching-on-mobile-devices-in-june) <!-- Suggested by NotebookLM. Copy is a rough draft by PM -->
+- **Decrypt's Jose Antonio Lanz** says open-source AI video generators like SkyReels and FramePack are [increasingly competitive](https://decrypt.co/316027/open-source-video-generators-full-length-movies) with their proprietary cousins, pushing boundaries in video length and other features. Hmmm...
 
 ### Odds & Ends
 
